# nix-python

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  actrun.toml  flake.nix  justfile  nixpython.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
tests/: test_smoke.py
