[project]
name = "nix-python"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = ["httpx>=0.28.1", "pydantic>=2.13.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pudb>=2025.1.5", "pytest>=9.0.3", "pytest-cov>=7.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
