[project]
name = "nix-python"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = ["httpx>=0.28.1", "pydantic>=2.13.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# PEP 735: 役割別 dependency groups。CI で --only-group <name> 指定可能。
[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
debug = [
    "pudb>=2025.1.5",
]
dev = [
    { include-group = "test" },
    { include-group = "debug" },
]
# 将来追加する可能性があるグループ（必要になったら有効化）:
# docs = ["mkdocs", "mkdocs-material"]
# typecheck = ["mypy"]  # ty 以外の型チェッカーを併用したい場合

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
