[project]
name = "nix-python"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = ["httpx>=0.28.1", "pydantic>=2.13.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# PEP 735: 役割別 dependency groups。CI で --only-group <name> 指定可能。
[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
debug = [
    "pudb>=2025.1.5",
]
dev = [
    { include-group = "test" },
    { include-group = "debug" },
]
# 将来追加する可能性があるグループ（必要になったら有効化）:
# docs = ["mkdocs", "mkdocs-material"]
# typecheck = ["mypy"]  # ty 以外の型チェッカーを併用したい場合

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
# 将来追加する可能性のある設定:
# asyncio_mode = "auto"                # pytest-asyncio 導入時
# markers = ["slow: 遅いテスト"]        # カスタムマーカー登録時

[tool.ruff]
line-length = 110
# target-version は project.requires-python から自動推論される。
# 明示したい場合のみ target-version = "py314" を追加。

[tool.ruff.lint]
# 既定 (E4, E7, E9, F) に追加する形で rule を拡張。
extend-select = [
    "W",     # pycodestyle warnings
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
